hphp/test/slow/parser/php-reserved-name-classname-2.php.expectf
Fatal error: Cannot use 'HH\Classname' as class name as it is reserved in %s on line 4
